63 pages are corrected (9th proof correction)

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -12,9 +12,9 @@
 
 
 \input macros
-\input final-dict
+%\input final-dict
 %\input dictionary %for jss-001-281.tex
-%\input dictionary1
+\input dictionary1
 %\input dictionary3
 %\input anu-dictionary
 %\input dict-ta-ma-03042019
