--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -6,6 +6,59 @@
 \medskip
 
 \begin{entry}
+\word{aMgasathxla-liMgasathxla saMbaMdha}
+\meaning{\arthanonum{parashivanu mAnava matutx parxpaMcavanunx saqSiTxmADida meVle adariMda dUra uLiyade, adaralelxV aMtagaRtanAgirutAtxne. manuSayxnu parashivananunx Aru sathxlagaLalilx sAkASxtAkxra mADikoLaLxbahudu. aMgana I Aru aMgasathxlagaLeMdare Bakatx, maheVsha, parxsAdi, pArxNaliMgi, sharaNa matutx aikayx. avanu sAkASxtAkxra mADikoLuLxva shivana sathxlagaLige liMgasathxlaveMba hesaridudx, avu karxmavAgi AcAra\-liMga, guruliMga, shivaliMga, jaMgamaliMga, parxsAdaliMga matutx mahAliMga enisikoLuLxtatxve. I Aru aMgasathxlagaLu\break Aru liMgasathxlagaLalilx saMbaMdha hoMdive. heVgeMdare; \hbox{manuSayxna} aMgavu parashivana shakitxya rUpAMtara. \hbox{manuSayxnu} baMdhanadalilxruvavarege aMgasathxlagaLu shakitx athavA adhoVmAye enisikoLuLxtatxve. oMdu veVLe avanu avugaLanunx AdhAyxtimxka udedxVshakAkxgi baLasidare avu Bakitx athavA UdhavxRmAye enisikoLuLxtatxve.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad motatxmodalaneya AdhAyxtimxka sAdhaneya haMtadalilxruva sAdhaka BakatxnenisikoLuLxtAtxne. parashivana kirxyAshakitxyu Bakatxnalilx GArxNeVMdirxyavAgi rUpAMtaragoMDidudx adaralilx parashivanu AcAraliMgarUpadalilx aMtagaRtavAgidAdxne. AcAra\-liMgavanunx sAkASxtakxrisikoLaLxbeVkeMba Bakatxnu tananx citatxvanenxV hasatx\-vanAnxgi mADikoMDu AcAraliMgakekx parimaLadarxvayxgaLanunx apiRsutAtxne hAgU A apiRtavu gaMdhaveMba parxsAdavAgutatxde. Bakatxna I Bakitxge vishAvxsaBakitx athavA sharxdAdhxBakitx athavA\break sadaBxkitx eMdu hesaru. hiVge apiRsida citatxvu sucitatxvenisi\-koLuLxtatxde. GArxNeVMdirxyadalilxruva AcAraliMgakekx avanu apiRsuvudariMda, GArxNeVMdirxyavu (mUgu) parashivana (AcAraliMgada) bAyi (muKa) enisikoLuLxtatxde. (a.sU., 7.45)}}
+\smallskip
+\newmeaning{\arthanonum{\qquad AdhAyxtimxka sAdhaneya eraDaneya haMtadalilxruva sAdhakanige maheVsha (mAheVshavxra) eMdu hesaru. parashivana jAcnxna\-shakitxyu mAheVshasathxladalilxruva sAdhakanalilx jihevxVMdirxya\-vAgi (nAlageyAgi) rUpAMtaragoMDidudx, parashivanu adaralilx guru\-liMga\-vAgi aMtagaRtavAgidAdxne. guruliMgavanunx sAkASxtakxrisikoLaLxbeVkeMba maheVshanu tananx budidhxyanenxV hasatxvanAnxgi mADikoMDu, rasaveMba darxvayxvanunx apiRsi, adanunx ruciyeMba parxsAdavanAnxgi mADikoLuLxtAtxne. maheVshana I Bakitxge neYSiThxkaBakitx eMdu hesaru. rasavanunx apiRsuva maheVshana budidhxge subudidhxyeMdu hesaru. nAlageyalilxruva guruliMgakekx\break avanu ruciyanunx apiRsuvudariMda, A apaRNeyanunx sivxVkari\-suva jihevxVMdirxyavu (nAlageyu) parashivana (guru\-liMgada) bAyi (muKa) enisikoLuLxtatxde. (a.sU., 7.46)}}
+\smallskip
+\newmeaning{\arthanonum{\qquad AdhAyxtimxka sAdhaneya mUraneya haMtadalilxruva sAdhaka\-nige parxsAdi eMdu hesaru. parashivana icACxshakitxyu \hbox{sAdhakana} neVtarxvAgi rUpAMtaragoMDidudx, adaralilx aMtasathxvAgiruva parashivanige shivaliMga eMdu hesaru. shivaliMgavanunx sAkASxtakxrisi\-koLaLxbeVkeMba parxsAdiyu tananx ahaMkAra\-vanenxV hasatxvanAnxgi mADikoMDu rUpadarxvayxgaLanunx shivaliMgakekx apiRsi, adanunx rUpa eMba parxsAdavanAnxgi mADikoLuLxtAtxne. \hbox{parxsAdiya} I Bakitxge avadhAnaBakitx eMdu hesaru. beLakanunx apiRsuva parxsAdiya ahaMkArakekx nirahaMkAraveMdu hesaru. neVtarx\-dalilxruva shivaliMgakekx avanu rUpavanunx apiRsuvudariMda A apaRNeyanunx sivxVkarisuva neVterxVMdirxyavu (kaNuNx) parashivana (shivaliMgada) bAyi (muKa) enisikoLuLxtatxde. (a.sU., 7.47)}}
+\smallskip
+\newmeaning{\arthanonum{\qquad AdhAyxtimxka sAdhaneya nAlakxneya haMtadalilxruva sAdhaka\-nige pArxNaliMgiyeMdu hesaru. parashivana Adishakitxyu \hbox{sAdhakana} tavxgiMdirxyavAgi rUpAMtaragoMDidudx, adaralilx aMtasathx\-vAgiruva parashivanige jaMgamaliMgaveMdu hesaru. jaMgamaliMgavanunx sAkASxtakxrisikoLaLxbeVkeMba pArxNaliMgiyu\break tananx manasasxnenxV hasatxvanAnxgi mADikoMDu, sapxshaRdarxvayxgaLanunx jaMgama\-liMgakekx apiRsi, adanunx sapxshaRveMba parxsAdavanAnxgi mADikoLuLxtAtxne. pArxNaliMgiya I Bakitxge anuBAvaBakitx eMdu hesaru. sapxshaRvanunx apiRsuva pArxNaliMgiya manasisxge\break sumanaveMdu hesaru. tavxgiMdirxya (camaR) dalilxruva jaMgama\-liMgakekx avanu soVMkanunx apiRsuvudariMda, adanunx sivxVkari\-suva tavxgiMdirxyavu parashivana (jaMgamaliMgada) bAyi (muKa) enisi\-koLuLxtatxde. (a.sU., 7.48)}}
+\smallskip
+\newmeaning{\arthanonum{\qquad aidaneya haMtadalilxruva sAdhakanige sharaNaneMdu hesaru. parashivana parAshakitxyu sharaNana shorxVterxVMdirxyavAgi rUpAMtara\-goMDidudx, adaralilx aMtasathxvAgiruva parashivanige parxsAda\-liMgaveMdu hesaru. parxsAdaliMgavanunx sAkASxtakxrisi\-koLaLx\-beVkeMba sharaNanu tananx jAcnxnavanenxV hasatxvanAnxgi mADikoMDu, shabadxvanunx parxsAdaliMgakekx apiRsi, sushabadxveMdu parxsAdavanunx paDeyutAtxne. sharaNana I Bakitxge AnaMdaBakitx eMdu hesaru. shabadxvanunx apiRsuvudariMda, A apaRNeyanunx sivxVkarisuva shorxVterxVMdirxyavu parashivana (parxsAdaliMgada) bAyi (muKa) enisikoLuLxtatxde. (a.sU., 7.49)}}
+\smallskip
+\newmeaning{\arthanonum{\qquad koneya haMtada sAdhakanige aikayxneMdu hesaru. \hbox{parashivana} citfshakitxyu aikayxna BAva(haqdaya)vAgi rUpAMtara\break\-goMDidudx, adaralilx aMtasathxvAgiruva parashivanige mahA\-liMga\-veMdu hesaru. mahAliMgavanunx sAkASxtakxrisikoLaLxbeVkeMba aikayxnu tananx BAvavanenxV (jiVvAtamxnanenxV) hasatxvanAnxgi mADikoLuLxtAtxne. aikayxnu toVrisuva Bakitxge samarasaBakitx eMdu\break hesaru. taqpitxyanunx apiRsuva aikayxna BAvakekx kelavu veVLe sadABxva\-veMdu kareyalAgutatxde. haqdayadalilxruva mahA\-liMgakekx avanu taqpitxyanunx apiRsuvudariMda, A apaRNe\-yanunx sivxVkarisuva haqdayavu parashivana (mahAliMgana) bAyi (muKa) enisikoLuLxtatxde. (a.sU., 7.50)}}
+%\smallskip
+%\newmeaning{\arthanonum{aMgasathxla hAgU liMgasathxlagaLa saMbaMdhavanunx yAva shakitx yAva iMdirxyavAgi rUpAMtaragoMDide muMtAda meVlina vivaragaLanunx I keLaginaMte saMkiSxpatxvAgi toVrisabahudu. (va.pA.koV.)}}
+%\smallskip
+%\newmeaning{\artha{piMDasathxla, piMDajAcnxnasathxla, saMsAraheVyasathxla, gurukAruNayxsathxla, liMgadhAraNasathxla, viBUtisathxla, rudArxkaSx dhAraNasathxla, paMcAkaSxriVjapasathxla, Bakitxsathxla, surUpoVBayasathxla, tirxvidhi saMpatutxsathxla, catuviRdha sArAyasathxla, upAdhimATasathxla, nirupAdhi mATasathxla matutx sahaja mATasathxla eMba 15 viBAgagaLu Bakatxsathxladalilxve.} \artha{mAheVshavxraparxshaMsAsathxla, liMganiSAThxsathxla, pUvARsharxya nirasanasathxla, vAgadevxYtanirasanasathxla, AhAvxnanirasanasathxla, aSaTxtanumUtiRnirasanasathxla, savaRgatanirasanasathxla, shivajaganamxyasathxla matutx deVhikaliMgasathxla eMba 9 viBAgagaLu mAheVshavxrasathxladalilxve.} \artha{pArxsAdisathxla, gurumAhAtamxyXsathxla, liMgamAhAtamxyXsathxla, jaMgamamAhAtamxyXsathxla, BakatxmAhAtamxyXsathxla, sharaNamAhAtamxyXsathxla matutx parxsAdamAhAtamxyXsathxla eMba 7 viBAgagaLu parxsAdisathxladalilxve.} \artha{pArxNaliMgisathxla, pArxNaliMgAcaRnasathxla, shivayoVgasamAdhisathxla, liMganijasathxla matutx aMgaliMgasathxla eMba 5 viBAgagaLu pArxNaliMgisathxladalilxve.} \artha{sharaNasathxla, tAmasanirasanasathxla, nideRVshasathxla matutx shiVlasaMpAdanasathxla eMba 4 viBAgagaLu sharaNasathxladalilxve.}
+%\artha{aikayxsathxla, AcArasaMpatitxsathxla, EkaBAjanasathxla matutx sahaBoVjanasathxla eMba 4 viBAgagaLu aikayxsathxladalilxve.}}
+\begin{shl}
+AcArAyApiRtA paqthivxV guroVrApaH samapiRtAH\\
+shivAya cApiRtaM teVjashcxrAya marudapiRtaH\\
+parxsAdAyApiRtaM voyxVma jiVvAtAmx mahateVpiRtaH
+\end{shl}
+\smallskip
+\pauthor{(shivAnu. 45-115)}
+\smallskip
+\vskip 1pt
+\newmeaning{\ni{aMgasathxlaM ca liMgasathxlaM ca aMgasathxlaliMgasathxleV, tayoVH saMbaMdhaH - aMgasathxlaliMgasathxla saMbaMdhaH}}
+\end{entry}
+%aMgasathxlaliMgasathxlasaMbaMdhaH - 
+
+\begin{entry}
+\word{arivu kuruhu}
+\src{va}
+\meaning{\arthanonum{arivu eMdare visheVSa tiLivaLike. I tiLivaLikeyanunx iMdirxyagoVcara
+ vishiSaTx {jAcnxna} enanx\-bahudu. arivu uMTAguvudu ``citf"dalilx. `citf'dalilx moVha, ahaMkAra, loVBAdi guNagaLu BAvarUpadalilx
+ nelasidare `citf' ashudadhxvAgi aMdare ashudadhxBAvagaLa leVpanavuMTAgi
+ yAvudu nija, yAvudu asatayx eMdu tiLiyada aviveVkiyaMte
+ vatiRsuvaMtAgutatxde. citf \hbox{shudidhxge} liMgavanunx kuruhu (saMkeVta)
+ mADikoMDu sAdhanegeYdare ashudadhxBAvagaLa maraveyuMTAgi
+ citfdalilxdadx shivana parikalapxne uMTAgutatxde. adakekx terahilalx, adeV GanavAdudu:}
+\ullekha{nenahu satitxtutx BArxMtu beMditutx arivu mareyitutx kuruhugeTiTxtutx (savasaM. 2; alalxma. 298-86); ariyade ajAcnxnadalilx kuruhu bididxtetxMdu pArxNAGAtava mADikoMDu sAva ajAcnxnigaLa noVDA! (savasaM.\break 3; cenanxba. 1275-449); neleya meVliTuTx kuruhu\-geDabalalxDe terahilalx kapilasidadhxmalilxkAjuRna (savasaM. 4; sidadhxrA. 701-198).}}
+\end{entry}
+
+\begin{entry}
+\word{apiRtavilalxda ApAyxyini}
+\meaning{\arthanonum{liMga aMga beVreyeMdukoMDa\break\-vanu liMgakekx (parashivanige) halavu BakaSxyXBoVjayxgaLanunx
+ apiRsi, avugaLanunx parxsAdaveMdu sivxVkarisi taqpitxpaDutAtxne.\break Adare, liMgAnuBAviyAda sharaNanu EnanUnx liMgakekx apiRsa\break\-deyeV, EnanUnx parxsAdaveMdu sivxVkarisadeyeV taqpitxpaTuTx\-koLuLxtAtxne. avanige tAnu shivanalilx oMdAgiruvudeV oMdu
+GanavAda taqpitx:} \ullekha{kamaRvilalxda kAraNikanu, apiRtavilalxda ApAyxyani, jaMgamavilalxda samashiVlanu, liMgavilalxda nirutanu (savasaM. 3; cenanxba. 759-226).}}
+\end{entry}
+
+\begin{entry}
 \word{aDaDxNige}
 \meaning{\arthanonum{UTada taTeTx modalAdavugaLanunx iDuva savxlapx etatxravAda piVTha; mukAkxlumaNe. (mUru kAlina maNe):}
 \ullekha{sadA saninxhitave liMgapUje, satayxveV aDaDxNige, samate pariyANa, mana miVsaloVgara (savasaM. 3; cenanxba. 216-64); shAsatxrXveV aDaDxNigeyAgi AgamaveV harivANa (savasaM. 7; koVlashA. 100-45); BASegeVrisida tanuveV aDaDxNige, GanaveV harivANa, mana miVsaloVgara (savasaM. 9; apapxNaNx. 1012-313); BakatxneMba aDaDxNigeya meVle, maheVshavxraneMba harivANavanikikx (savasaM. 10; jakakxNa. 942-528); oDeyara sahapaMkitxyalilx pariyANa aDaDxNigeyanirisikoMDu uMba samagArxhakanalalx (savasaM. 8; bahurU. 144-61); aDaDxNige pariyANa taTeTx baTaTxlu ...guruvige koDabeVkeMdu tAtapxyaRvu (gaNaBA. 256-16).}}
