correction complete upto page no. 131

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -109,6 +109,32 @@ GanavAda taqpitx:} \ullekha{kamaRvilalxda kAraNikanu, apiRtavilalxda ApAyxyani, 
 %%%A
 
 \begin{entry}
+\word{AcAraliMgada parxsananxtavx}
+\src{va}
+\meaning{\arthanonum{nAsikAgarxdalilx liMgavanunx parxtiSAThxpisidavanu; liMgavu modalu AGArxNisade tAnu vAsane noVDalAra; inUnx muMduvaredu tananx GArxNeVMdirxyaveV liMgada GArxNeVMdirxyaveMdU, {nijavAda} taqpitx\-paDuvudu tAnalalx, liMga eMdu tiLiyuvavanu nijavAda parxsAdi. idariMda AcAraliMgada parxsananxtav pArxpitxx:}
+\ullekha{AcAra\-liMgada parxsananxtavxdiMda Bakatx bayalAdanu (savasaM. 11; toVMTasi. 660-294).}}
+\vskip 2pt
+\newmeaning{\ni{AcAraliMgasayx parxsananxtavxM - AcAraliMgaparxsananxtavxM}}
+\end{entry}
+
+\begin{entry}
+\word{AdiBakatx, anAdijaMgama}
+\src{va}
+\meaning{\arthanonum{jaMgamaliMgadoDane aikayx sAdhisiruvudariMda, avanu anAdi; avananunx naDe\-dADuva (jaMgama) liMga eMdu kareyuvudu I kAraNakAkxgiyeV. liMga anAdiyAdare, jaMgamaliMgavU anAdiyAgaleV beVku. Bakatxnu modalu BaviyAgidudx, avana Bakitx yAvudoV oMdu nidiRSaTx samayadalilx pArxraMBavAguvudariMda, Bakatxnu `Adi' (Adi uLaLxvanu) enisikoLuLxtAtxne:}
+\ullekha{Adi\-Bakatx, anAdijaMgama, Adishakitx, anAdi shivanu noVDA (savasaM. 1; basava. 1041-280).}}
+\vskip 2pt
+\newmeaning{\ni{Adi+Bakatx - AdiBakatx}}
+\end{entry}
+
+\begin{entry}
+\word{AroVha avaroVha}
+\src{va}
+\meaning{\arthanonum{meVleVruvudu, keLagiLiyuvudu; oMdu vishiSaTx riVtiya pArxNAyAmada mUlaka {dhAyxnada} oMdu haMtavanunx talupidAga, dhAyxniya benunxhuriyalilx oMdu pariNAma uMTAgutatxde. adeMdare, meVliniMda pArxNavAyuvu keLagiLidu (avaroVhavAgi) keLaginiMda apAnavAyuvu meVleVri (AroVhavAgi) averaDU oMdu kaDe saMdhisutatxve. parashivana niHkala rUpu I riVti AroVha avaroVhavAgi ADutatxde eMbudu kelavu vacana\-kArara naMbike:} \ullekha{A niHkala tatatxvXda rUpu AroVha avaroVhavAgi eDeyADutitxpapxdu (savasaM. 8; moVLige. 2130-686).}}
+\vskip 2pt
+\newmeaning{\ni{AroVhaH - A+ruhf+Gaknf avaroVhaH - ava+ruhf+Gaknf}}
+\end{entry}
+
+\begin{entry}
 \word{AkAsha}
 \meaning{\arthanonum{Agasa; gagana; paMcamahABUtagaLalilx hAgU mUvatAtxru tatatxvXgaLalilx
 oMdu; shabadxvu guNavU vAyxpakavU Adudu. elalx jiVvarAshigaLige avakAsha
