correction complete upto page no. 251

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -265,6 +265,14 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 \end{entry}
 
 \begin{entry}
+\word{urasathxlada paraMjoyxVtiliRMga}
+\src{va}
+\meaning{\arthanonum{aMtaraMgadalilxruva citakxLe, pArxNaliMga, haqdayadalilx Atamx\-nidAdxne eMba upaniSatitxna mAtanunx vacanakArarU opupxtAtxre; A AtamxneV (aMganeV) liMgavAdudariMda haqdayadalilx paraMjoyxVtiliRMgavide eMdathaR:} \ullekha{urasathxlada paraMjoyxVti liMgava enanx karasathxlakekx koTaTxru. A guru koTaTx liMgaveMba dapaRNava noVDi, enanx manaveMba sapaR A dapaRNadalilx liVyavAyitutx (savasaM. 9; haDapa. 853-262).}}
+\vskip 1pt
+\newmeaning{\ni{paraM ca tatf joyxVtishacx paraMjoyxVtiH, paraMjoyxVtiSaH liMgaM - paraMjoyxVtiliRMgaM}}
+\end{entry}
+
+\begin{entry}
 \word{uriyuMDa kapuRra}
 \src{va}
 \meaning{\arthanonum{uriyuMDa kapURravu heVge tAnu ilalxvAgi uriye AgutatxdeyoV, hAgeyeV liMgadalilx aikayxvAda aMgavU tananxtanavanunx kaLedukoMDu liMgaveV Agutatxde:}
@@ -373,6 +381,18 @@ tadiMdarxdeYvataM porxVkatxM sadA swBAgayxvadhaRnamf ||
 \newmeaning{\ni{EkAdashavakAtxrXNi yasayx rudArxkaSxsayx saH - EkAdashavakatxrXrudArxkaSxH}}
 \end{entry}
 
+\begin{entry}
+\word{ELunUrepapxtutx parxmatha gaNaMgaLu}
+\meaning{\arthanonum{parxmathareMdare parashivana saMgaDigaru; avaru  mukatxrAgidAdxralalxde, keYlAsadalilx shivana  parivAradalilxruvavaru. Adare vacanakAraru BUmiya meVlidadx kelavu viVrasheYva saMtaranunx parxmatha gaNagaLa maTaTxkekxVrisi, avara
+ saMKeyx 770 eMdu nidhaRrisidAdxre. \hbox{avaralilx}
+ parxmuKareMdare - uriliMga pedidx, nuliya caMdayayx, \hbox{haDapada}
+ apapxNaNx, meVdAra keVtayayx, gajeVsha masaNayayx, \hbox{basavaNaNx},
+ cenanxbasavaNaNx, parxBudeVvaru. ivarelalxrU liMgAMga
+ sAmarasayx paDedu, jiVvanumxkatxrAgi tamamx kAyavanenxV
+ keYlAsa\-vanAnxgi mADikoMDavareMba kAraNakAkxgi avaranunx
+ parxmathareMdu karedira\-bahudu (va.pa.koV. 101):} \ullekha{sharaNara nilava uriliMga pedadxyayxgaLu, nuliya caMdayayxgaLu, haDapada apapxNaNx\-gaLu, mAdAra keVtayayxgaLu, gajeVsha masaNayayxgaLu, basavaNaNx,\break cenanxbasavaNaNx, parxBudeVvaru modalAda ELunUrepapxtutx parxmatha\-gaNaMgaLu balalxralalxde, mikikxna BavaBArigaLAda veVdAMti, {sidAdhxMti} yoVgamAgiRgaLu modalAda BinanxBAva jiVvAtamxretatx balalx\-rayAyx (savasaM. 10; kADasi. 298-189).}}
+\end{entry}
+
 %%%ai
 
 \begin{entry}
@@ -414,6 +434,25 @@ tadiMdarxdeYvataM porxVkatxM sadA swBAgayxvadhaRnamf ||
 yArAdarU heVLidare adu keVvala suLaLxlalx, asAdhayxda mAtU
 hwdu. EkeMdare paMcaBUtagaLanAnxgali, avugaLa vishiSaTx
 guNagaLanAnxgali parxteyxVkavAgi noVDalu sAdhayxvilalx:} \ullekha{aidara guNavaDagi, mUrara guNa mugidu, Arara guNa hAri, eMTara guNada neMTatanava baMdhisi toVrutatxdakekx munanxveV mana jAri niMditu (savasaM. 8; moVLige. 1917-646).}}
+\end{entry}
+
+\begin{entry}
+\word{aidu iMdirxyagaLa cakarx}
+\src{va}
+\meaning{\arthanonum{kelavu dashaRnagaLa parxkAra kelavu pArxNigaLige oMdiMdirxya,
+ kelavakekx eraDu, kelavakekx mUru,\break kelavakekx nAlukx iMdirxyagaLu
+ irutatxve. manuSayxnige aidu iMdirxya\-gaLive. vacanakArara parxkAra
+ Bavavu oMdu cakarx. cakarxkekx AdiyAgali, aMtayxvAgali
+ ilalx. hAgeyeV saqSiTxya oMdu BAgavAgiruva manuSayxnu cakarxda
+ kaDiDxgaLaMte aneVka bAri saqSiTxyAgidAdxne hAgU tananx kamaRkekx
+ takakxMte matetx saqSiTxyAgutAtxne. Aga avana iMdirxyagaLAda kaNuNx,
+kivi, mUgu, camaR\break matutx nAlagegaLU avanalilx utapxtitxyAgutatxve. I
+aidu\break iMdirxyagaLa cakarxgaLu tirugadidadxre (vAyxpAragaLu
+naDeyadidadxre), aMdare, manuSayx yAvudeV riVtiya kamaR\-gaLanunx
+mADadidadxre, Aga avanige
+pApapuNayxgaLuMTAguvudilalx. pApapuNayxgaLuMTAgadidadxre
+saqSiTxyAguvudilalx. AdudariMda rUpacakarx (nayanacakarx) itAyxdigaLa
+cakarxgaLu tirugadidadxre,\break loVkAdiloVkagaLeV iruvudilalx:} \ullekha{rUpa cakarx nayanadiMde naDevudu; shabadxcakarx shoVtarxdiMde naDe\-vudu, swraBacakarx GArxNadiMde naDevudu, rucicakarx jihevxyiMde naDevudu, sapxshaRcakarx tavxkikxniMde naDevudu loVkAdiloVkaMgaLelalx (savasaM. 3; cenanxba. 1501-549).}}
 \end{entry}
 
 \begin{entry}
@@ -597,12 +636,46 @@ iruvudilalx.}}
 \end{entry}
 
 \begin{entry}
+\word{katARrana kamamxTa}
+\src{va}
+\meaning{\arthanonum{saqSiTxkataRnAda parashivana kamamxTa. kamAmxranu tananx kamamxTadalilx vasutxgaLanunx rUpisuvaMte elalx jiVvigaLu matayxRloVkadalilx tamamx jiVvanavanunx rUpisikoLaLxbeVku. matayxRloVkavu katARrana (saqSiTxkataRna) kamamxTa:}
+\ullekha{mataRyxloVka\-veMbudu katARrana kamamxTavayAyx, ililx salulxvaru alilxyU\break salulxvarayAyx. ililx salalxdavaru alilxyU salalxru kUDala\-saMgamadeVvA (savasaM. 1; basava. 155-40); paqthivx eMbudu katARrana {kamamxTa} acicxna moLe bANasada mane. tanumanadhanaM\-gaLelalxvu namamx guheVshavxraliMgada somumx (savasaM. 2; alalxma. 1479-438); atiRyiMda mADuva Bakitx, katARrana kamamxTa\-kokxLagAyitutx. satayxdiMda mADuva Bakitx, katARrana kamamxTakekx horagAyitutx (savasaM. 9; shivaleM. 220-74).}}
+\end{entry}
+
+\begin{entry}
+\word{kAyada meYlige}
+\meaning{\arthanonum{huTuTx, beLavaNige, roVgarujina, mupupx, sAvu muMtAda deVhakekx saMbaMdhisida vikAragaLu. shudadhxvAda Atamxkekx ivelAlx meYligegaLu.}}
+\end{entry}
+
+\begin{entry}
+\word{kAyada suLuhu}
+\src{va}
+\meaning{\arthanonum{jiVvanapayaRMta:} \ullekha{``kAyada suLuhuLaLxnanxkakx kamaRpUje beVkeMbaru'' (savasaM. 8; mAcenanx. 1157-416).}}
+\end{entry}
+
+\begin{entry}
+\word{kAlana kamamxTa}
+\src{va}
+\meaning{\arthanonum{maqtuyxvina kArAyxgAra:}
+\ullekha{kulumeyA\-kArakekx bAyige bahavarelAlx kAlana kamamxTakekx guriyAdaru (savasaM. 7; GaTaTxvA. 432-149).}}
+\end{entry}
+
+\begin{entry}
   \word{kuruhiMda arivanarivudu}
   \src{va}
 \meaning{\arthanonum{iSaTxliMgavu cinamxyavAda parashivana kuruhu. adanunx pUjisi, AmeVle dhAyxna mADidAga kuruhu kANadAgi dhAyxniyu citatxnunx
  (arivanunx) mAtarx kANutAtxne (va.pa.koV. 128):}
 \ullekha{niVroLagaNa kicicxge niVre tAyi... avu horahomimxdAga tAya tiMdu, tAvu taledoVruvaMte kuruhiMda arivanaritu arivu kuruhu naSaTxva mADi niMdalilxye, aiGaTadUra rAmeVshavxraliMga, aMgava aritu niMda nilavu (savasaM. 8; meremiM. 1347-463).}}
 %arasikoMDAgi baMdalilx... oMdu kuruhiMde jaridu liMgadalulxMTeMdu.. (savasaM. 12; deVshikeVM. ????); karaNaMgaLa nivaqtitxya... A kuruhiMde iMdirxyaMgaLu salesaMdu.. (savasaM. 7; dAsoVha. ????); niVroLagaNa kicicxge niVre tAyi avu horahomimxdAga tAya tiMdu, tAvu taledoVruvaMte kuruhiMda arivanaritu arivu kuruhu naSaTxva mADi niMdalilxye, aiGaTadUra rAmeVshavxraliMga, aMgava aritu niMda nilavu (savasaM. 8; meremiM. ????).
+\end{entry}
+
+\begin{entry}
+\word{kulavilalxda akula}
+\src{va}
+\meaning{\arthanonum{nijavAda Bakatxnige tananx kulada bagege ahaMkAravAgali, itarara
+ kulada bagege tirasAkxravAgali iruvudilalx. Ita tanagoMdu
+ kulavide eMbudanUnx opupxvu\-dilalxvAdudariMda avanu  kulavilalxda akula:}
+\ullekha{kulavilalxda aku\-lanu, shariVravilalxda saMbaMdhi, koVpavilalxda shAMtanu, matasxravilalxda mahimanu (savasaM. 3; cenanxba. 759-226).}}
 \end{entry}
 
 \begin{entry}
@@ -656,6 +729,18 @@ gotitxlalxdirabahudu. Adare pariNAmavilalxda GaTanegaLilalx.}}
 \end{entry}
 
 %%%%%ga
+\begin{entry}
+\word{gatiya patha}
+\src{va}
+\meaning{\arthanonum{liMgAMgasAmarasayxveV gati; adanunx sAdhisi\-koLuLxva dAriyeV patha. shivayoVga (rUDhi).}}
+%\ullekha{baDagavAgilalx... tirxvidhagatiya shUnayxsiMhAsanada meVle taraharavAdaDe.. (savasaM. 1; basava. 1275-351); nenahu satitxtutx... gatiyanarasaluMTe? matiyanarasaluMTe?.. (savasaM. 2; alalxma. 298-86); parxmathaveVdigaLelalxrU gatiyale silukidaru.. (savasaM. 3; cenanxba. 742-222); nAnu ninagolide... niVnirisida gatiyoLagipapxvaLAnu, niVne balelx cenanxmalilxkAjuRnA (savasaM. 5; akakxma. 254-75); mAyAguNa rUpAdalilx... keYya Dakekxya gatiya hiMgi.. (savasaM. 7; Dakekxbo. 961-291).}}
+\end{entry}
+
+\begin{entry}
+\word{gadidxge dhAvaLi}
+\meaning{\arthanonum{shivapUjeya samayadalilx piVThada meVle hAsuva cikakx biLikaMbaLi (rUDhi).}}
+\end{entry}
+
 \begin{entry}
 \word{guruliMgada parxsananxtavx}
 \src{va}
